vpc-main/guest-book/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: frontend
  labels:
    app: guestbook
    tier: frontend
spec:
  # type: NodePort
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
