vpc-main/guest-book/redis-slave-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: development
  name: redis-slave
  labels:
    app: redis
    role: slave
    tier: backend
spec:
  ports:
  - port: 6379
  selector:
    app: redis
    role: slave
    tier: backend
