vpc-main/guest-book/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: guestbook
  namespace: development
spec:
  host: guestbook
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
