vpc-main/guest-book/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook
  namespace: development
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
    - route:
      - destination:
          host: guestbook
          subset: v1
        weight: 50
      - destination:
          host: guestbook
          subset: v2
        weight: 50
